# P10-SoftDesk

./: .flake8  .gitignore  README.md  pyproject.toml
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_remove_user_age_user_date_of_birth.py  0004_alter_user_date_of_birth.py  0005_alter_user_date_of_birth.py  0006_alter_user_date_of_birth.py
config/: settings.py  urls.py
flake8-report/: index.html  softdesksupport.serializers.report.html  softdesksupport.serializers.source.html
softdesksupport/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
softdesksupport/management/commands/: seed_data.py
softdesksupport/migrations/: 0001_initial.py  0002_issue_type.py  0003_add_comment_uuid.py  0004_remove_comment_unique_id_comment_id.py
